add way of setting indexes for dom elements for later retrieval

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 
 .cell {
   border: 1px solid black;
-  font-size: 6rem;
+  font-size: 7rem;
+  text-align: center;
 }
 
 #left-corner-top {
