--- a/style.css
+++ b/style.css
@@ -59,11 +59,27 @@ body {
   border-right: none;
 }
 
+dialog {
+  border-radius: 10%;
+}
+
 .dialog-container {
   width: 400px;
   height: 400px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   flex-direction: column;
+  gap: 16px;
+}
+
+.dialog-container button {
+  padding: 8px 16px;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+
+.dialog-container button:active {
+  position: relative;
+  top: 4px;
 }
