--- a/style.css
+++ b/style.css
@@ -7,9 +7,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .gameboard {
+  margin-top: 60px;
   display: grid;
   width: 600px;
   height: 600px;
